# eccw

./: .gitignore  .odt  MANIFEST.in  README.md  README.rst  issues.txt  setup.cfg  setup.cfg.back  setup.py
eccw/: __init__.py  authors.py  eccw_compute.py  eccw_explore.py  eccw_plot.py  main.py  shared.py  version.py
eccw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
eccw/gui/: __init__.py
eccw/gui/calculator_app/: __init__.py  calculator_main.ui  calculator_main_controller.py  calculator_main_viewer.py
eccw/gui/calculator_app/controllers/: calculator_main.py
eccw/gui/calculator_app/uis/: calculator_main.ui
eccw/gui/calculator_app/viewers/: calculator_main.py  make_viewers.sh
eccw/gui/main_app/: dialogue_about.ui  dialogue_about_controller.py  dialogue_about_viewer.py  main.ui  main_controller.py  main_viewer.py
eccw/gui/main_app/controllers/: dialog_about.py  dialogue_about.py  main.py
eccw/gui/main_app/uis/: dialog_about.ui  dialogue_about.ui  main.ui
eccw/gui/main_app/viewers/: dialog_about.py  dialogue_about.py  main.py
eccw/gui/plot_app/controllers/: curve_graphicSettings.py  curve_settings.py  dialog_errors.py  plot_main.py  point_settings.py  title_settings.py
eccw/gui/plot_app/uis/: curve_graphicSettings.ui  curve_settings.ui  plot_main.ui  point_settings.ui  title_settings.ui
eccw/gui/plot_app/viewers/: __init__.py  curve_settings.py  make_viewers.sh  plot_main.py  point_settings.py
eccw/gui/shared/: __init__.py  wrappers.py
eccw/gui/shared/controllers/: __init__.py  colorButton (copie).py  colorButton.py  colorButton_svg.py  comboBox.py  lineEdit.py  radioButton.py  spinBox.py
eccw/gui/shared/uis/: colorButton.ui  comboBox_colorMap.ui  comboBox_context.ui  comboBox_line.ui  comboBox_point.ui  horizontalLayout.ui  label.ui  lineEdit.ui  lineEdit_bound.ui  lineEdit_range.ui  lineEdit_switch.ui  radioButton.ui  spinBox.ui  toolButton.ui  verticalLayout.ui
eccw/gui/shared/viewers/: __init__.py  colorButton.py  comboBox_colorMap.py  comboBox_context.py  comboBox_line.py  comboBox_point.py  horizontalLayout.py  lineEdit.py  lineEdit_bound.py  lineEdit_switch.py  make_viewers.sh  radioButton.py  spinBox.py  toolButton.py
eccw/images/: readme.txt  ressources.qrc  texte.txt
eccw/physics/: __init__.py  compute.py  eccw_compute.py  eccw_plot.py  explore_phiB.py  plot.py
eccw/shared/: __init__.py  checkers.py  file_management.py  print_tools.py  tools.py
eccw/test/: ref_points.csv  test.eccw  test2.eccw  test_print_tools.py
eccw/tests/: test.eccw  test_eccw_compute.py  test_tools.py
eccw/tui/: main.py
scripts/: eccw.desktop
tests/: explore_phiB.py  test.eccw  test_eccw_compute.py  test_shared.py
