[metadata]
name = eccw
version = 2.0.0
description = Exact Critical Coulomb Wedge : tools to compute and display the exact solution of any parameter of Critical Coulomb Wedge
long_description = file: README.rst
author =
    BCL Mary
    Xiaoping Yuan
    YM Leroy
    Pauline Souloumiac
    Chong Wu
author_email = bclmary@mailoo.org
url = https://github.com/bclmary
license = GPL-3.0+
keywords = geology, accretionnary prism
classifiers =
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 5 - Stable
    Environment :: X11 Applications :: Qt
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU GPL-3.0+
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Scientific/Engineering :: Geology
install_requires =
    numpy>=1.10
    matplotlib>=2.0
    pyqt5>=5.6
    xmltodict>=0.10
python_requires = >=3.3


