[metadata]
name = eccw
version = 2.0.4
description = Exact Critical Coulomb Wedge : tools to compute and display the exact solution of any parameter of Critical Coulomb Wedge
long_description = file: README.rst
author =
    BCL Mary
    Xiaoping Yuan
    YM Leroy
    Pauline Souloumiac
    Chong Wu
maintainer = BCL Mary
maintainer_email = bclmary@mailoo.org
url = https://github.com/bclmary
license = GPL-3.0+
keywords = geology, accretionnary prism
platforms = linux
classifiers =
    # Development Status:
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Environment :: Console
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy >= 1.10
    matplotlib >= 2.0
    pyqt5 >= 5.6
    xmltodict >= 0.10
python_requires = >=3.4



