[metadata]
name = eccw
version = 2.0.5.post9
description = Exact Critical Coulomb Wedge : tools to compute and display the exact solution of any parameter of Critical Coulomb Wedge
long_description = file: README.rst
maintainer = BCL Mary
maintainer_email = bclmary@mailoo.org
url = https://github.com/bclmary
license = GPL-3.0+
keywords = geology, accretionnary prism
platforms = linux
classifiers =
    # Development Status:
    #   1 - Planning
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    #   6 - Mature
    #   7 - Inactive
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Environment :: Console
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 7
    Topic :: Scientific/Engineering
    Topic :: Education

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy >= 1.10
    matplotlib >= 2.0
python_requires = >=3.4



